# registration_form_rust

./: .gitignore  Cargo.toml
.cargo/: config.toml
src/: main.rs
static/: edit_user.html  index.html  login_form.html  profile.html  style.css  users.html
