[package]
name = "email_form_project"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "builder", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "time", "chrono"] }
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
tera = "1.19"
reqwest = { version = "0.11", features = ["blocking", "json"] }
actix-multipart = "0.6"
rocket-session-store = "0.2.1"
actix-session = { version = "0.9", features = ["redis-rs-session"] }




